# ndesk-options-mirror

./: .gitignore  ChangeLog  Makefile  Makefile.am  README  autogen.sh  configure.ac  ndesk-options.spec
doc/: .gitignore  Makefile  Makefile.am  Makefile.include  doc-template.html  ndesk-options-docs.source
doc/en/: index.xml  ns-NDesk.Options.xml  ns-System.xml
doc/en/NDesk.Options/: Option.xml  OptionAction`2.xml  OptionContext.xml  OptionException.xml  OptionSet.xml  OptionValueCollection.xml  OptionValueType.xml
doc/en/System/: Action`2.xml
doc/en/examples/: .gitignore  bundling.cs  bundling.in  bundling.txt  context.cs  context.in  context.txt  greet.cs  greet.in  greet.txt  localization.cs  localization.in  localization.txt  subclass.cs  subclass.in
doc/web/: index.html
doc/web/archive/: .gitignore
lib/: .gitignore
lib/pkgconfig/: .gitignore  mono-program-2.0.pc  ndesk-options-3.5.pc  ndesk-options-net2.0.pc.in  ndesk-options-net3.5.pc.in  ndesk-options.pc.in
src/Mono.Program/Mono.Program/: Options.cs
src/NDesk.Options/: AssemblyInfo.cs  AssemblyInfo.cs.in
src/NDesk.Options/NDesk.Options/: Options.cs
src/NDesk.Options/Test/NDesk.Options/: OptionSetTest.cs
